--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.11.1",
     "chart.js": "^4.4.4",
     "confetti-react": "^2.6.0",
     "lucide-react": "^0.452.0",
