--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.11.1",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "confetti-react": "^2.6.0",
     "lucide-react": "^0.452.0",
