--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "confetti-react": "^2.6.0",
+    "driver.js": "^1.3.0",
     "lucide-react": "^0.452.0",
     "prefixer": "^0.0.3",
     "react": "^18.3.1",
