--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "to-words": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
